# vise

./: .gitignore  .mcp.json  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/agent-autoheal/: SKILL.md
.github/workflows/: ci.yml
agents/: backend-cpp.md  backend-csharp.md  backend-go.md  backend-java.md  backend-kotlin.md  backend-php.md  backend-python.md  backend-ruby.md  backend-rust.md  backend-typescript.md  db-migrator.md  debugger.md  docs-writer.md  frontend.md  reviewer.md  security-auditor.md  tester.md
commands/: debug.md  feature.md  status.md
hooks/: hooks.json
skills/architecture/: SKILL.md
skills/cpp-rules/: SKILL.md
skills/csharp-rules/: SKILL.md
skills/go-rules/: SKILL.md
skills/java-rules/: SKILL.md
skills/kotlin-rules/: SKILL.md
skills/lua-rules/: SKILL.md
skills/orchestration/: SKILL.md
skills/php-rules/: SKILL.md
skills/ponytail/: SKILL.md
skills/python-rules/: SKILL.md
skills/ruby-rules/: SKILL.md
skills/rust-rules/: SKILL.md
skills/swift-rules/: SKILL.md
skills/typescript-rules/: SKILL.md
src/vise/: __init__.py  __main__.py  server.py
src/vise/cli/: experience_cmd.py  graph_cmd.py  main.py
src/vise/core/: embed_cache.py  embeddings.py  lifecycle.py  paths.py  session.py  snapshots.py  state_paths.py
src/vise/engines/: __init__.py  config.py  dcc_glue.py  experience_gc.py  experience_memory.py  fsrs.py  goal_gate.py  goal_state.py  graph_engine.py  graph_parser.py  graph_state.py  lsp_diagnostics.py  memory_store.py  node_gate.py  telemetry.py  (+2 more)
(+126 files in other folders)
